# tempo-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE.md  compose.ts.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: cache.rs  edf_api.rs  lib.rs  server.rs  tempo_service.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
src/: cache.rs  edf_api.rs  main.rs  server.rs  tempo_service.rs
web/: package-lock.json  package.json
web/src/routes/: +page.svelte
