[package]
name = "tempo-proxy-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-rapidoc = { version = "6.0", features = ["axum"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }