[package]
name = "tempo-proxy-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tempo-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.44", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempo-proxy-api = { path = "../api" }